--- a/index.Rmd
+++ b/index.Rmd
@@ -9,9 +9,6 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
-## Welcome
-
-### More changes
 
 ```{r}
 # get libraries
@@ -20,7 +17,7 @@ if (!require(librarian)){
   library(librarian)
 }
 librarian::shelf(
-  clockify, dplyr, DT, glue, lubridate, readr)
+  bbest/clockify, dplyr, DT, glue, lubridate, readr)
 
 # CHANGE THESE VARIABLES!
 api_txt <- "/Users/petermenzies/MEDS/Fall_Quarter/EDS_211_Team/clockify_api_key"
@@ -31,23 +28,129 @@ CLOCKIFY_API_KEY <- readLines(api_txt)
 set_api_key(CLOCKIFY_API_KEY)
 
 # get data
-d_projects <- projects() %>% 
-      select(project_id, project_name)
-d_users <- users() %>% 
-      select(user_id, user_name)
-d_times <- time_entries(concise = F) %>% 
-  left_join(
-    d_projects, by = "project_id") %>% 
-  left_join(
-    d_users, by = "user_id")
-
-# show table
-d_times %>% 
+d_times <- time_entries_all()
+table(d_times$project_name) # confirm project_name
+d_times <- d_times %>%
+  filter(
+    project_name == !!project_name) %>%
   select(
-    user_name, project_name, 
-    time_start, duration, description) %>% 
-  arrange(user_name, project_name, time_start) %>% 
-  datatable() %>%
-  formatRound(columns=c('duration'), digits=3)
+    task_name, time_start, duration_hrs, 
+    user_name, description) %>% 
+  arrange(task_name, time_start)
 ```
+
+## sst_satellite_analysis {.tabset}
+
+### Overall
+
+```{r}
+# plot ALL
+plot_burndown(
+  d_times,
+  beg = as.Date("2021-10-31"), # day before
+  end = as.Date("2021-11-21"), # day after
+  hrs = 20)
+
+# table ALL
+datatable(d_times)
+```
+
+### 1. Import
+
+```{r}
+task <- "1. Import"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-10-31"), # day before
+  end = as.Date("2021-11-08"), # day after
+  hrs = 2)
+datatable(d_task)
+```
+
+### 2. Tidy
+
+```{r}
+task <- "2. Tidy"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-10-31"), # day before
+  end = as.Date("2021-11-08"), # day after
+  hrs = 1)
+datatable(d_task)
+```
+
+### 3. Transform
+
+```{r}
+task <- "3. Transform"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-10-31"), # day before
+  end = as.Date("2021-11-15"), # day after
+  hrs = 4)
+datatable(d_task)
+```
+
+### 4. Visualize
+
+```{r}
+task <- "4. Visualize"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-11-07"), # day before
+  end = as.Date("2021-11-22"), # day after
+  hrs = 4)
+datatable(d_task)
+```
+
+### 5. Combine
+
+```{r}
+task <- "5. Combine"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-11-14"), # day before
+  end = as.Date("2021-11-22"), # day after
+  hrs = 6)
+datatable(d_task)
+```
+
+### 6. Model
+
+```{r}
+task <- "6. Model"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-11-21"), # day before
+  end = as.Date("2021-11-29"), # day after
+  hrs = 9)
+datatable(d_task)
+```
+
+### 7. Communicate
+
+```{r}
+task <- "7. Communicate"
+d_task <- d_times %>%
+  filter(task_name == !!task)
+plot_burndown(
+  d_task,
+  beg = as.Date("2021-11-21"), # day before
+  end = as.Date("2021-11-30"), # day after
+  hrs = 8)
+datatable(d_task)
+```
+
 
