--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,7 @@ set_api_key(CLOCKIFY_API_KEY)
 
 # get data
 d_times <- time_entries_all()
-table(d_times$project_name) # confirm project_name
+# table(d_times$project_name) # confirm project_name
 d_times <- d_times %>%
   filter(
     project_name == !!project_name) %>%
